alignment issue fix

--- a/src/app/Profile/profilepage/profilepage.component.css
+++ b/src/app/Profile/profilepage/profilepage.component.css
@@ -39,7 +39,7 @@
     border-radius: 7px;
     cursor: pointer;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 12px;
     padding: 5px 34px 
 }
 .follow{
@@ -284,11 +284,11 @@
 
 .postimgmobile{
     cursor: pointer;
-    /* height: 102%; */
-    height:17vh;
+    height: 17vh;
     border-radius: 1px;
-    box-shadow: 0px 0px 2px #919191;
     width: 123%;
+    border: 1px solid #d9d8d8;
+    margin-top: 2px;
 }
 
 .profilepicinpost{
